@@ -10,7 +10,7 @@ Package: @basename@-jre
 Section: non-free/java
 Architecture: all
 Provides: java-virtual-machine, java-runtime, java2-runtime, java5-runtime, java6-runtime, java-runtime-headless, java2-runtime-headless, java5-runtime-headless, java6-runtime-headless
-Depends: java-common (>= 0.28), locales, @basename@-bin (>= @pkg_version@) | ia32-@basename@-bin (>= @pkg_version@), ${misc:Depends}
+Depends: java-common (>= 0.28), locales, @basename@-bin (>= ${source:Version}) | ia32-@basename@-bin (>= ${source:Version}), ${misc:Depends}
 Recommends: gsfonts-x11
 Suggests: @basename@-plugin, @basename@-fonts, @cjk_fonts@
 Replaces: @basename@-bin, ia32-@basename@-bin
@@ -28,7 +28,7 @@ Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (architecture
 Package: @basename@-bin
 Section: non-free/java
 Architecture: amd64 i386
-Depends: @basename@-jre (>= @pkg_version@), ${odbc:Depends}, ${shlibs:Depends}, ${misc:Depends}
+Depends: @basename@-jre (>= ${source:Version}), ${odbc:Depends}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: ${shlibs:Recommends}
 Suggests: binfmt-support
 Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (architecture dependent files)
@@ -46,7 +46,7 @@ Package: @basename@-plugin
 Architecture: amd64 i386
 Section: non-free/web
 Priority: optional
-Depends: ${misc:Depends}, @basename@-bin (>= @pkg_version@), @browsers@
+Depends: ${misc:Depends}, @basename@-bin (>= ${source:Version}), @browsers@
 Xb-Npp-Applications: ec8030f7-c20a-464f-9b0e-13a3a9e97384, 92650c4d-4b8e-4d2a-b7eb-24ecf4f6b63a 
 Xb-Npp-Name: The Java(TM) Plug-in, Java SE @RELEASE@
 Xb-Npp-MimeType: application/x-java-vm, application/x-java-applet, application/x-java-applet;version=1.1, application/x-java-applet;version=1.1.1, application/x-java-applet;version=1.1.2, application/x-java-applet;version=1.1.3, application/x-java-applet;version=1.2, application/x-java-applet;version=1.2.1, application/x-java-applet;version=1.2.2, application/x-java-applet;version=1.3, application/x-java-applet;version=1.3.1, application/x-java-applet;version=1.4, application/x-java-applet;version=1.4.1, application/x-java-applet;version=1.4.2, application/x-java-applet;version=1.5, application/x-java-applet;version=1.6, application/x-java-applet;jpi-version=@jdkversion@_@releng_ver@, application/x-java-bean, application/x-java-bean;version=1.1, application/x-java-bean;version=1.1.1, application/x-java-bean;version=1.1.2, application/x-java-bean;version=1.1.3, application/x-java-bean;version=1.2, application/x-java-bean;version=1.2.1, application/x-java-bean;version=1.2.2, application/x-java-bean;version=1.3, application/x-java-bean;version=1.3.1, application/x-java-bean;version=1.4, application/x-java-bean;version=1.4.1, application/x-java-bean;version=1.4.2, application/x-java-bean;version=1.5, application/x-java-bean;version=1.6, application/x-java-bean;jpi-version=@jdkversion@_@releng_ver@, application/x-java-vm-npruntime
@@ -61,7 +61,7 @@ Description: Java(TM) Plug-in, Java SE @RELEASE@
 Package: ia32-@basename@-bin
 Section: non-free/java
 Architecture: amd64
-Depends: @basename@-jre (>= @pkg_version@), ia32-libs, ${shlibs:Depends}, ${odbc:Depends}, ${misc:Depends}
+Depends: @basename@-jre (>= ${source:Version}), ia32-libs, ${shlibs:Depends}, ${odbc:Depends}, ${misc:Depends}
 Recommends: ${shlibs:Recommends}, ia32-libs-gtk
 Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (32-bit)
  The @vendor@ Java Platform Standard Edition Runtime Environment (JRE) @RELEASE@
@@ -77,7 +77,7 @@ Description: @vendor@ Java(TM) Runtime Environment (JRE) @RELEASE@ (32-bit)
 Package: @basename@-fonts
 Section: non-free/fonts
 Architecture: all
-Depends: @JRE@ (>= @pkg_version@), defoma, ${misc:Depends}
+Depends: @JRE@ (>= ${source:Version}), defoma, ${misc:Depends}
 Provides: ttf-lucida
 Conflicts: ttf-lucida
 Description: Lucida TrueType fonts (from the @vendor@ JRE)
@@ -86,7 +86,7 @@ Description: Lucida TrueType fonts (from the @vendor@ JRE)
 
 Package: @basename@-jdk
 Architecture: amd64 i386
-Depends: @basename@-bin (>= @pkg_version@), ${shlibs:Depends}, ${misc:Depends}
+Depends: @basename@-bin (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
 Suggests: @basename@-demo, default-jdk-doc, @basename@-source
 Provides: java-compiler, java2-compiler, java-sdk, java2-sdk, java5-sdk, java6-sdk
 Description: @vendor@ Java(TM) Development Kit (JDK) @RELEASE@
@@ -99,7 +99,7 @@ Description: @vendor@ Java(TM) Development Kit (JDK) @RELEASE@
 
 Package: @basename@-demo
 Architecture: amd64 i386
-Depends: @basename@-jre (>= @pkg_version@), @basename@-jdk (>= @pkg_version@), ${shlibs:Depends}, ${misc:Depends}
+Depends: @basename@-jre (>= ${source:Version}), @basename@-jdk (>= ${source:Version}), ${shlibs:Depends}, ${misc:Depends}
 Replaces: @basename@-jdk
 Enhances: @basename@-jdk
 Suggests: default-jdk-doc
@@ -111,7 +111,7 @@ Description: @vendor@ Java(TM) Development Kit (JDK) @RELEASE@ demos and example
 
 Package: @basename@-source
 Architecture: all
-Depends: @basename@-jdk (>= @pkg_version@), ${misc:Depends}
+Depends: @basename@-jdk (>= ${source:Version}), ${misc:Depends}
 Description: @vendor@ Java(TM) Development Kit (JDK) @RELEASE@ source files
  The JDK(TM) is a development environment for building applications, 
  applets, and components using the Java programming language.
@@ -122,7 +122,7 @@ Description: @vendor@ Java(TM) Development Kit (JDK) @RELEASE@ source files
 Package: @basename@-javadb
 Architecture: all
 Section: non-free/java
-Depends: @basename@-jdk (>= @pkg_version@), ${misc:Depends}
+Depends: @basename@-jdk (>= ${source:Version}), ${misc:Depends}
 Enhances: @basename@-jdk
 Description: Java(TM) DB, Sun Microsystems' distribution of Apache Derby
  Java DB is Sun's supported distribution of the open source Apache 
